--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,7 @@
 <h1><%= current_user.email %></h1>
 <%= link_to 'Log out', sessions_path, method: :delete %>
+<br>
+<%= link_to 'Edit', edit_profile_path %>
+
+<h4>Image</h4>
+<%= image_tag current_user.avatar_url, height: '32', width: '32' %>
