--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,19 @@
 <h1>Sign up</h1>
-<%= form_for(@user) do |f| %>
+<%= form_tag users_path do %>
   <%= render 'shared/error_messages', locals: { object: @user } %>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= label_tag :name %>
+  <%= text_field_tag :name %>
 
-  <%= f.label :email %>
-  <%= f.email_field :email %>
+  <%= label_tag :email %>
+  <%= email_field_tag :email %>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %>
+  <%= label_tag :password %>
+  <%= password_field_tag :password %>
 
-  <%= f.label :password_confirmation, "Confirmation" %>
-  <%= f.password_field :password_confirmation %>
+  <%= label_tag :password_confirmation, "Confirmation" %>
+  <%= password_field_tag :password_confirmation %>
 
-  <%= f.submit "Sign up" %>
+  <%= submit_tag %>
 <% end %>
 
