--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,4 +4,6 @@
 <%= link_to 'Edit', edit_profile_path %>
 
 <h4>Image</h4>
-<%= image_tag current_user.avatar_url, height: '32', width: '32' %>
+<% if current_user.avatar_url.present? %>
+  <%= image_tag current_user.avatar_url, height: '32', width: '32' %>
+<% end %>
