--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,20 @@
     <title>Biblioteo</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application'  %>
   </head>
 
   <body>
+    <!-- TODO: move this navbar to the partial -->
+    <div class='navbar'>
+      <ul>
+        <li><%= link_to 'Home', '#' %></li>
+        <li><%= link_to 'Home', '#' %></li>
+        <li><%= link_to 'Home', '#' %></li>
+      </ul>
+    </div>
+    <!--  -->
     <%= yield %>
      <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
