--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <% if current_user.present? %>
     <ul>
       <li><p> Signed in as <%=current_user.email%> </p></li>
-      <li><%= link_to 'Sign out', new_session_path(current_user), method: :delete %></li>
+      <li><%= link_to 'Sign out', sessions_path, method: :delete %></li>
     </ul>
     <% else %>
     <ul>
